@@ -4,7 +4,7 @@
 
 ;; Author: John Sullivan <john@wjsullivan.net>
 ;; Created 25 October 2004
-;; Version: 0.1 2005-01-14
+;; Version: 0.1 2005-02-03
 ;; Keywords: comm, hypermedia
 
 ;; This program is free software; you can redistribute it and/or
@@ -70,7 +70,7 @@
 (defvar delicious-api-html "/html/"
   "*The path to the del.icio.us HTML feed.  It should begin and end with a slash.")
 
-(defconst delicious-api-version "delicioapi.el/0.1 2005-01-14"
+(defconst delicious-api-version "delicioapi.el/0.1 2005-02-03"
 "The version string for this copy of delicioapi.el.")
 
 (defconst delicious-api-field-match "=\"\\(.*?\\)\""
@@ -254,18 +254,18 @@
 
 
 (defun delicious-api-get-posts (&optional tag date)
-"Return a list of posts filtered by TAG on a given DATE.  If no date is supplied, the most recent date with posts will be used.  The list is HREF, DESCRIPTION, HASH, TAG, and TIME."
+"Return a list of posts filtered by TAG on a given DATE.  If no date is supplied, the most recent date with posts will be used.  The list is HREF, DESCRIPTION, EXTENDED, HASH, TAG, and TIME."
 (let* ((uri (concat "posts/get?"
                     (unless (null tag)
                       (format "&tag=%s" tag))
                     (unless (null date)
                       (format "&dt=%s" date))))
-       (search (delicious-build-search "href" "description" "hash" "tag" "time")))
+       (search (delicious-build-search "href" "description" "extended" "hash" "tag" "time")))
   (delicious-send-request (delicious-build-request uri))
   (delicious-do-search-list (car search) (cdr search))))
 
 (defun delicious-api-get-recent (&optional tag count)
-"Return a list, optionally filtered by TAG, of the COUNT most recent posts.  The list is HREF, DESCRIPTION, HASH, TAG, and TIME.  This will max out at 100.  Use `delicious-api-get-all' if you want more than that."
+"Return a list, optionally filtered by TAG, of the COUNT most recent posts.  The list is HREF, DESCRIPTION, EXTENDED, HASH, TAG, and TIME.  This will max out at 100.  Use `delicious-api-get-all' if you want more than that."
 (let* ((count-fixed (cond
                      ((null count)
                       15)
@@ -276,14 +276,14 @@
                     (unless (null tag)
                       (format "&tag=%s" (url-hexify-string tag)))
                     (format "&count=%s" count-fixed)))
-       (search (delicious-build-search "href" "description" "hash" "tag" "time")))
+       (search (delicious-build-search "href" "description" "extended" "hash" "tag" "time")))
   (delicious-send-request (delicious-build-request uri))
   (delicious-do-search-list (car search) (cdr search))))
 
 (defun delicious-api-get-all ()
-"Return a list of all posts from your account.  The list is HREF, DESCRIPTION, HASH, TAG, and TIME."
+"Return a list of all posts from your account.  The list is HREF, DESCRIPTION, EXTENDED, HASH, TAG, and TIME."
 (let ((uri "posts/all")
-      (search (delicious-build-search "href" "description" "hash" "tag" "time")))
+      (search (delicious-build-search "href" "description" "extended" "hash" "tag" "time")))
   (delicious-send-request (delicious-build-request uri))
   (delicious-do-search-list (car search) (cdr search))))
 
